Skeleton almost done

--- a/gi-pro-mobile/www/css/ionic.app.css
+++ b/gi-pro-mobile/www/css/ionic.app.css
@@ -9814,3 +9814,66 @@ a.button {
   opacity: 0;
   -webkit-transition-duration: 0s;
   transition-duration: 0s; }
+
+/* Buttons */
+.button.button-fab {
+  position: absolute;
+  width: 52px;
+  height: 52px;
+  top: auto;
+  right: 10px;
+  bottom: 10px;
+  left: auto;
+  padding: 0;
+  border-radius: 26px;
+  box-shadow: 2px 2px 2px #c8c8c8; }
+
+/* Menu */
+.menu {
+  /*background-color: transparent;*/ }
+  .menu .list .item {
+    /*border-color: transparent;*/
+    /*color: white;*/ }
+  .menu .list .item.item-complex .item-content {
+    /*background-color: transparent;*/ }
+  .menu .list .item.active {
+    /*color: $t_orange;*/ }
+
+/* Tabs */
+.tab-item {
+  /*opacity: 1;*/ }
+
+/*
+.tab-item.tab-item-active,
+.tab-item.active,
+.tab-item.activated {
+	color: $t_orange;
+}
+*/
+.tabs-striped .tabs {
+  /*border-color: transparent;*/ }
+
+.tabs-top.tabs-striped .tab-item {
+  max-width: none;
+  /*text-transform: uppercase;*/ }
+
+.tabs-top.tabs-striped .tab-item.tab-item-active,
+.tabs-top.tabs-striped .tab-item.active,
+.tabs-top.tabs-striped .tab-item.activated {
+  /*border-width: 0px 0px 3px 0px !important;*/ }
+
+/*
+ * HOME
+ */
+.home .scroll-view {
+  height: 100%; }
+
+/*
+ * SEARCH
+ */
+.search .bar-footer {
+  background: none;
+  /*padding: 0;*/ }
+  .search .bar-footer .button.button-block {
+    margin: 0;
+    /*border-radius: 0;*/ }
