--- a/gi-pro-mobile/www/templates/menu.html
+++ b/gi-pro-mobile/www/templates/menu.html
@@ -12,17 +12,25 @@
 	</ion-side-menu-content>
 
 	<ion-side-menu side="left">
-		<!--
-		<ion-header-bar class="bar-stable">
-			<h1 class="title">Left</h1>
+		<ion-header-bar>
+			<!--<h1 class="title">Left</h1>-->
 		</ion-header-bar>
-		-->
+
 		<ion-content>
 			<ion-list>
 				<ion-item nav-clear menu-close class="item item-icon-left" ui-sref-active="active" ui-sref="app.home">
 					<i class="icon ion-home"></i> {{'home' | translate}}
 				</ion-item>
-				<ion-item nav-clear menu-close class="item item-icon-left" ng-if="!user" ng-click="">
+				<ion-item nav-clear menu-close class="item item-icon-left" ui-sref-active="active" ui-sref="app.notifications">
+					<i class="icon ion-ios-bell"></i> {{'notifications' | translate}}
+				</ion-item>
+				<ion-item nav-clear menu-close class="item item-icon-left" ui-sref-active="active" ui-sref="app.history">
+					<i class="icon ion-folder"></i> {{'history' | translate}}
+				</ion-item>
+				<ion-item nav-clear menu-close class="item item-icon-left" ui-sref-active="active" ui-sref="app.profile">
+					<i class="icon ion-person"></i> {{'profile' | translate}}
+				</ion-item>
+				<ion-item nav-clear menu-close class="item item-icon-left" ng-if="!user" ng-click="login()">
 					<i class="icon ion-log-in"></i> {{'login' | translate}}
 				</ion-item>
 				<ion-item nav-clear menu-close class="item item-icon-left" ng-if="!!user" ng-click="logout()">
