--- a/gi-pro-mobile/www/templates/form_request.html
+++ b/gi-pro-mobile/www/templates/form_request.html
@@ -3,7 +3,7 @@
 		<!--<button class="button button-icon button-clear" ng-click=""></button>-->
 	</ion-nav-buttons>
 
-	<ion-content>
-		<h4>FORM REQUEST</h4>
+	<ion-content class="padding">
+		<button class="button button-dark" ng-click="openPoisModal()">Apri POIs Modal</button>
 	</ion-content>
 </ion-view>
