--- a/gi-pro-mobile/www/templates/form_request.html
+++ b/gi-pro-mobile/www/templates/form_request.html
@@ -4,6 +4,8 @@
 	</ion-nav-buttons>
 
 	<ion-content class="padding">
-		<button class="button button-dark" ng-click="openPoisModal()">Apri POIs Modal</button>
+		<button class="button button-block button-dark" ng-click="openPoisModal()">Apri POIs Modal</button>
+		<button class="button button-block button-dark" ng-click="openDatePicker()">Apri DatePicker</button>
+		<button class="button button-block button-dark" ng-click="openTimePicker()">Apri TimePicker</button>
 	</ion-content>
 </ion-view>
