--- a/gi-pro-mobile/www/templates/modal_pois.html
+++ b/gi-pro-mobile/www/templates/modal_pois.html
@@ -1,30 +1,37 @@
-<ion-modal-view>
+<ion-modal-view class="modal-pois has-header has-footer">
 	<ion-header-bar>
 		<div class="title">Ricerca POI</div>
 		<button class="button button-stable button-clear icon ion-close" ng-click="closePoisModal()"></button>
 	</ion-header-bar>
 
-	<ion-content>
-		<div class="item item-input item-stacked-label" ng-click="openTypesPopup()">
-			<span class="input-label">{{'poi_type' | translate}}</span>
-			<input type="text" readonly placeholder="{{'poi_type_placeholder' | translate}}" ng-model="search.type.name">
-		</div>
-		<div class="item item-input item-stacked-label" ng-click="openRegionsPopup()">
-			<span class="input-label">{{'poi_region' | translate}}</span>
-			<input type="text" readonly placeholder="{{(search.type.region == false ? 'poi_region_placeholder_notneeded' : 'poi_region_placeholder') | translate}}" ng-model="search.region">
-		</div>
-		<div class="item item-input">
-			<input type="text" placeholder="{{'poi_filter_placeholder' | translate}}" ng-model="search.text">
+	<ion-content delegate-handle="scroll-pois">
+		<div class="list list-inputs">
+			<div class="item item-input item-stacked-label" ng-click="openTypesPopup()">
+				<span class="input-label">{{'poi_type' | translate}}</span>
+				<input type="text" readonly placeholder="{{'poi_type_placeholder' | translate}}" ng-model="search.params.type.name">
+			</div>
+			<div class="item item-input item-stacked-label" ng-click="openRegionsPopup()">
+				<span class="input-label">{{'poi_region' | translate}}</span>
+				<input type="text" readonly placeholder="{{(search.params.type.region == false ? 'poi_region_placeholder_notneeded' : 'poi_region_placeholder') | translate}}" ng-model="search.params.region">
+			</div>
 		</div>
 
-		<ion-list>
-			<ion-radio ng-repeat="poi in pois | filter:search.text:strict" ng-model="search.poi">
-				<h5>poi.name</h5>
-			</ion-radio>
-		</ion-list>
+		<div class="list-container">
+			<div class="list list-inset">
+				<div class="item item-input">
+					<input type="text" placeholder="{{'poi_filter_placeholder' | translate}}" ng-model="search.name">
+				</div>
+
+				<ion-list class="list-pois">
+					<ion-radio ng-repeat="poi in pois | filter:{'name': search.name}" ng-value="poi" ng-model="search.poi">
+						{{poi.name}}
+					</ion-radio>
+				</ion-list>
+			</div>
+		</div>
 	</ion-content>
 
 	<ion-footer-bar>
-		<button class="button button-dark button-block" ng-click="closePoisModal(getSelectedPoi)">{{'ok' | translate}}</button>
+		<button class="button button-dark button-block" ng-disabled="!search.poi" ng-click="closePoisModal(getSelectedPoi)">{{'ok' | translate}}</button>
 	</ion-footer-bar>
 </ion-modal-view>
