--- a/gi-pro-mobile/www/templates/popup_regions.html
+++ b/gi-pro-mobile/www/templates/popup_regions.html
@@ -1,3 +1,3 @@
-<ion-list class="popup-regions">
+<ion-list>
 	<ion-item ng-repeat="region in regions" ng-click="selectRegion(region)">{{region}}</ion-item>
 </ion-list>
