--- a/gi-pro-mobile/www/templates/popup_types.html
+++ b/gi-pro-mobile/www/templates/popup_types.html
@@ -1,3 +1,3 @@
-<ion-list class="popup-types">
+<ion-list>
 	<ion-item ng-repeat="type in types" ng-click="selectType(type)">{{type.name}}</ion-item>
 </ion-list>
