--- a/gi-pro-mobile/www/css/ionic.app.css
+++ b/gi-pro-mobile/www/css/ionic.app.css
@@ -9907,6 +9907,20 @@ a.button {
 input[readonly] {
   background-color: transparent !important; }
 
+/*.item-stacked-label {
+	border: 0;
+	.input-value {
+		color: black;
+		font-size: 14px;
+		white-space: normal;
+	}
+	.input-value.placeholder {
+		color: gray;
+	}
+}
+.item-toggle {
+	border: 0;
+}*/
 /* Footer */
 .bar-footer {
   background: none;
