--- a/gi-pro-mobile/www/templates/form_offer.html
+++ b/gi-pro-mobile/www/templates/form_offer.html
@@ -4,6 +4,40 @@
 	</ion-nav-buttons>
 
 	<ion-content>
-		<h4>FORM OFFER</h4>
+		<h4>Nuova offerta</h4>
+		<div class="item item-input item-stacked-label" ng-click="openPoisModal()">
+			<span class="input-label">{{'new_poi' | translate}}</span>
+			<!--<input type="text" readonly placeholder="{{'new_poi_placeholder' | translate}}" ng-model="newOffer.poi.name" />-->
+			<div class="input-value" ng-class="{'placeholder': !newOffer.poi}">{{newOffer.poi.name ? newOffer.poi.name : ('new_poi_placeholder' | translate)}}</div>
+		</div>
+
+		<div class="item item-toggle">
+			{{'new_datetime' | translate}}
+			<label class="toggle toggle-dark">
+				<input type="checkbox" ng-model="newOffer.useDateTime">
+				<div class="track">
+					<div class="handle"></div>
+				</div>
+			</label>
+		</div>
+
+		<div class="row" ng-if="newOffer.useDateTime">
+			<div class="col col-60">
+				<div class="item item-input item-stacked-label" ng-click="openDatePicker()">
+					<span class="input-label">{{'new_date' | translate}}</span>
+					<div class="input-value" ng-class="{'placeholder': !newOffer.date}">{{newOffer.date ? (newOffer.date | date:'longDate') : ('new_date_placeholder' | translate)}}</div>
+				</div>
+			</div>
+			<div class="col col-40">
+				<div class="item item-input item-stacked-label" ng-click="openTimePicker()">
+					<span class="input-label">{{'new_time' | translate}}</span>
+					<div class="input-value" ng-class="{'placeholder': !newOffer.time}">{{newOffer.time ? (newOffer.time | date:'HH:mm') : ('new_time_placeholder' | translate)}}</div>
+				</div>
+			</div>
+		</div>
+
+		<!--<button class="button button-block button-dark" ng-click="openPoisModal()">Apri POIs Modal</button>-->
+		<!--<button class="button button-block button-dark" ng-click="openDatePicker()">Apri DatePicker</button>-->
+		<!--<button class="button button-block button-dark" ng-click="openTimePicker()">Apri TimePicker</button>-->
 	</ion-content>
 </ion-view>
