--- a/gi-pro-mobile/www/templates/home.html
+++ b/gi-pro-mobile/www/templates/home.html
@@ -9,13 +9,14 @@
 			<ion-pane>
 				<ion-content scroll="false">
 					<ion-scroll>
-						<h4 ng-if="!!requests && requests.length == 0">
-							{{'results_empty' | translate}}
-						</h4>
+						<h4 ng-if="!!requests && requests.length == 0">{{'requests_empty' | translate}}</h4>
 
-						<ion-list>
-							<h4 ng-repeat="i in [0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0] track by $index">RICHIESTA {{$index + 1}}</h4>
-						</ion-list>
+						<div class="card" ng-repeat="request in requests" ng-if="!!requests && requests.length > 0">
+							<div class="item item-text-wrap">
+								<h2>{{request.poi.name}}</h2>
+								<h3>{{request.startTime | date:'longDate'}}, {{request.startTime | date:'shortTime'}}</h3>
+							</div>
+						</div>
 					</ion-scroll>
 					<button class="button button-dark button-fab" ng-click="goTo('app.newrequest')">
 						<i class="icon ion-plus"></i>
@@ -28,11 +29,14 @@
 			<ion-pane>
 				<ion-content scroll="false">
 					<ion-scroll>
-						<h4 ng-if="!!requests && requests.length == 0">{{'results_empty' | translate}}</h4>
+						<h4 ng-if="!!offers && offers.length == 0">{{'offers_empty' | translate}}</h4>
 
-						<ion-list>
-							<h4 ng-repeat="i in [0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0] track by $index">OFFERTA {{$index + 1}}</h4>
-						</ion-list>
+						<div class="card" ng-repeat="offer in offers" ng-if="!!offers && offers.length > 0">
+							<div class="item item-text-wrap">
+								<h2>{{offer.poi.name}}</h2>
+								<h3>{{offer.startTime | date:'longDate'}}, {{offer.startTime | date:'shortTime'}} - {{offer.endTime | date:'shortTime'}}</h3>
+							</div>
+						</div>
 					</ion-scroll>
 					<button class="button button-dark button-fab" ng-click="goTo('app.newoffer')">
 						<i class="icon ion-plus"></i>
