--- a/gi-pro-mobile/www/templates/notifications.html
+++ b/gi-pro-mobile/www/templates/notifications.html
@@ -1,4 +1,4 @@
-<ion-view view-title="{{'app' | translate}}" class="notifications">
+<ion-view view-title="{{'notifications' | translate}}" class="notifications">
 	<ion-nav-buttons side="right">
 	</ion-nav-buttons>
 
