--- a/gi-pro-mobile/www/templates/searchresults.html
+++ b/gi-pro-mobile/www/templates/searchresults.html
@@ -4,22 +4,41 @@
 	</ion-nav-buttons>
 
 	<ion-content>
-		<h4 ng-if="!!results && results.length == 0">
-			{{'results_empty' | translate}}
+		<h4 ng-if="!!offers && offers.length == 0">
+			{{'offers_empty' | translate}}
 		</h4>
-		<ion-list ng-if="!!results && results.length > 0">
-			<div class="card" ng-repeat="result in results">
-				<a class="item item-thumbnail-left">
+
+		<p class="padding" ng-if="!!offers && offers.length > 0">{{'searchresults_desc' | translate}}</p>
+		<ion-list ng-if="!!offers && offers.length > 0">
+			<div class="card" ng-repeat="offer in offers" ng-click="openOfferDetails(offer)">
+				<div class="item item-thumbnail-left">
 					<img src="http://placekitten.com/200/200">
-					<h2>{{result.professional.name}} {{result.professional.surname}}</h2>
-					<p>{{result.professional}}</p>
+					<h2>{{offer.professional.name}} {{offer.professional.surname}}</h2>
+					<!--<p>{{offer.professional}}</p>-->
+					<ul>
+						<li class="phone"><span>{{'professional_phone' | translate}}:</span> {{offer.professional.phone}}</li>
+						<li class="email"><span>{{'professional_mail' | translate}}:</span> {{offer.professional.mail}}</li>
+					</ul>
+					<!--
 					<button class="button button-small button-dark" ng-click="">
 						<i class="icon ion-email"></i>
 					</button>
 					<button class="button button-small button-dark" ng-click="">
 						<i class="icon ion-android-call"></i>
 					</button>
-				</a>
+					-->
+				</div>
+
+				<!--
+				<div class="actions">
+					<a class="button button-small button-dark button-outline icon-left ion-android-call" ng-href="tel:{{offer.professional.phone}}">
+						{{'call' | translate}}
+					</a>
+					<a class="button button-small button-dark button-outline icon-left ion-email" ng-href="mailto:{{offer.professional.mail}}">
+						{{'email' | translate}}
+					</a>
+				</div>
+				-->
 			</div>
 		</ion-list>
 	</ion-content>
