LoginCtrl e login view created

--- a/gi-pro-mobile/scss/ionic.app.scss
+++ b/gi-pro-mobile/scss/ionic.app.scss
@@ -317,3 +317,14 @@ input[readonly] {
 		white-space: normal;
 	}
 }
+
+/*
+ * LOGIN AND REGISTRATION
+ */
+
+.login {
+	text-align: center;
+	.registration {
+		margin-top: 20px;
+	}
+}
