--- a/gi-pro-mobile/www/templates/menu.html
+++ b/gi-pro-mobile/www/templates/menu.html
@@ -30,7 +30,7 @@
 				<ion-item nav-clear menu-close class="item item-icon-left" ui-sref-active="active" ui-sref="app.profile">
 					<i class="icon ion-person"></i> {{'profile' | translate}}
 				</ion-item>
-				<ion-item nav-clear menu-close class="item item-icon-left" ng-if="!user" ng-click="login()">
+				<ion-item nav-clear menu-close class="item item-icon-left" ng-if="!user" ui-sref="app.login">
 					<i class="icon ion-log-in"></i> {{'login' | translate}}
 				</ion-item>
 				<ion-item nav-clear menu-close class="item item-icon-left" ng-if="!!user" ng-click="logout()">
