--- a/gi-pro-mobile/www/templates/login.html
+++ b/gi-pro-mobile/www/templates/login.html
@@ -4,18 +4,18 @@
 
 		<div class="list list-inset">
 			<label class="item item-input">
-				<input type="text" ng-maxlength="16" placeholder="{{'cf' | translate}}">
+				<input type="text" ng-maxlength="16" ng-model="user.cf" placeholder="{{'cf' | translate}}">
 			</label>
 			<label class="item item-input">
-				<input type="password" placeholder="{{'password' | translate}}">
+				<input type="password" ng-model="user.pwd" placeholder="{{'password' | translate}}">
 			</label>
 		</div>
-		<button class="button button-block button-dark">{{'login' | translate}}</button>
-		<a href="">{{'password_lost' | translate}}</a>
+		<button class="button button-block button-dark" ng-click="login()">{{'login' | translate}}</button>
+		<a ng-click="reset()">{{'password_lost' | translate}}</a>
 
 		<div class="registration">
 			<p>{{'new_account' | translate}}</p>
-			<button class="button button-small button-block button-dark">{{'register' | translate}}</button>
+			<button class="button button-small button-block button-dark" ng-click="register()">{{'register' | translate}}</button>
 		</div>
 	</ion-content>
 </ion-view>
