--- a/gi-pro-mobile/scss/ionic.app.scss
+++ b/gi-pro-mobile/scss/ionic.app.scss
@@ -328,3 +328,70 @@ input[readonly] {
 		margin-top: 20px;
 	}
 }
+
+/*
+ *PROFILE
+ */
+.profile {
+  .profile-image-container {
+    min-width: 100px;
+    width: 100px;
+    min-height: 100px;
+    height: 100px;
+    display: block;
+
+    .profile-image {
+      img {
+        width: 100px;
+        height: auto;
+      }
+    }
+
+    .profile-image-placeholder {
+      display: block;
+      border-radius: 8px;
+      height: 100%;
+      background-color: $stable;
+      position: relative;
+
+      .upload {
+        position: absolute;
+        bottom: 4px;
+        right: 8px;
+        font-size: 28px;
+        color: $dark;
+      }
+    }
+  }
+
+  .contact {
+    overflow: hidden;
+    white-space: nowrap;
+    line-height: 28px;
+    text-overflow: ellipsis;
+
+    i {
+      font-size: 28px;
+      color: $dark;
+      padding: 0 12px;
+    }
+    span {
+    }
+  }
+
+  .name {
+    font-size: 20px;
+    font-weight: 500;
+    color: $dark;
+    padding-bottom: 8px;
+  }
+  .title {
+    font-size: 14px;
+    color: $dark;
+    font-style: italic;
+  }
+  .address {
+    padding-top: 16px;
+    color: $dark;
+  }
+}
