--- a/gi-pro-mobile/www/templates/offer.html
+++ b/gi-pro-mobile/www/templates/offer.html
@@ -37,7 +37,7 @@
 		</ul>
 	</ion-content>
 
-	<ion-footer-bar ng-if="isMine()">
+	<ion-footer-bar ng-if="isEditable()">
 		<button class="button button-assertive button-outline button-block" ng-click="deleteOffer()">
 			{{'delete' | translate}}
 		</button>
