--- a/gi-pro-mobile/www/templates/form_request.html
+++ b/gi-pro-mobile/www/templates/form_request.html
@@ -42,7 +42,7 @@
 	</ion-content>
 
 	<ion-footer-bar>
-		<button class="button button-dark button-block" ng-disabled="!newRequest.poi || !newRequest.date || !newRequest.time" ng-click="createNewRequest()">
+		<button class="button button-calm button-block" ng-disabled="!newRequest.poi || !newRequest.date || !newRequest.time" ng-click="createNewRequest()">
 			{{'create' | translate}}
 		</button>
 	</ion-footer-bar>
