--- a/gi-pro-mobile/www/templates/login.html
+++ b/gi-pro-mobile/www/templates/login.html
@@ -10,12 +10,12 @@
 				<input type="password" ng-model="user.pwd" placeholder="{{'password' | translate}}">
 			</label>
 		</div>
-		<button class="button button-block button-dark" ng-click="login()">{{'login' | translate}}</button>
+		<button class="button button-block button-calm" ng-click="login()">{{'login' | translate}}</button>
 		<a ng-click="reset()">{{'password_lost' | translate}}</a>
 
 		<div class="registration">
 			<p>{{'new_account' | translate}}</p>
-			<button class="button button-small button-block button-dark" ng-click="register()">{{'register' | translate}}</button>
+			<button class="button button-small button-block button-calm" ng-click="register()">{{'register' | translate}}</button>
 		</div>
 	</ion-content>
 </ion-view>
