--- a/gi-pro-mobile/www/templates/form_offer.html
+++ b/gi-pro-mobile/www/templates/form_offer.html
@@ -65,6 +65,6 @@
 	</ion-content>
 
 	<ion-footer-bar>
-		<button class="button button-dark button-block" ng-disabled="!isFormValid" ng-click="createNewOffer()">{{'create' | translate}}</button>
+		<button class="button button-calm button-block" ng-disabled="!isFormValid" ng-click="createNewOffer()">{{'create' | translate}}</button>
 	</ion-footer-bar>
 </ion-view>
