--- a/gi-pro-mobile/www/templates/home.html
+++ b/gi-pro-mobile/www/templates/home.html
@@ -4,7 +4,7 @@
 		<button class="button button-icon button-clear ion-ios-bell" ng-click="goTo('app.notifications', {}, true, true, true)" ng-disabled="true"></button>
 	</ion-nav-buttons>
 
-	<ion-tabs class="tabs-stable">
+	<ion-tabs class="tabs-dark">
 		<ion-tab title="{{'home_tab_1' | translate}}">
 			<ion-pane>
 				<ion-content scroll="false">
@@ -18,7 +18,7 @@
 							</div>
 						</div>
 					</ion-scroll>
-					<button class="button button-dark button-fab" ng-click="goTo('app.newrequest')">
+					<button class="button button-calm button-fab" ng-click="goTo('app.newrequest')">
 						<i class="icon ion-plus"></i>
 					</button>
 				</ion-content>
